--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Vue Todo</title>
   <script src="https://unpkg.com/vue"></script>
   <script src="scripts/app.js"></script>
+  <style>
+    .completed {
+      text-decoration: line-through      
+    }
+  </style>
 </head>
 <body>
   <h1>Todos</h1>
@@ -15,7 +20,7 @@
         <input type="submit" value="書き込み" />
       </form>
       <ul>
-        <todo v-for="todo in todos" v-bind:todo="todo"></todo>
+        <todo v-for="todo in todos" v-bind:todo="todo" v-bind:key="todo.id" v-on:delete-todo="deleteTodo" ></todo>
       <ul>
     </div>
   </div>  
